refactor(analysis): 优化代码结构和数据处理逻辑
- 将匿名内部类替换为 lambda 表达式以简化 TypeReference 使用
- 使用现代 switch 表达式语法重构传统 switch 语句
- 移除 ChanTheoryCalculator 中未使用的参数简化方法签名
- 优化 DividendService 中的分组逻辑直接使用方法引用
- 修复日期格式化问题确保 Baostock API 调用正确
- 在 MarketThermometerService 中修正恐惧贪婪指数计算公式
- 添加主要指数行情展示功能包括上证、深证、创业板等
- 优化 PriceAdvisorService 中的技术指标计算性能
- 改进推荐服务中的流式处理避免重复查询
- 增强股票筛选服务的排序和解析效率
- 扩展新闻数据采集脚本支持增量更新模式